--- a/solarcoffee.frontend/package.json
+++ b/solarcoffee.frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -39,6 +40,10 @@
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
+  },
+  "prettier": {
+    "useTabs": true,
+    "tabWidth": 4
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
